min-width on #navigation to prevent text wrapping

--- a/src/styles/_navigation.scss
+++ b/src/styles/_navigation.scss
@@ -2,6 +2,7 @@
   width: 100%;
   height: 266px;
   background-color: var(--black-text);
+  min-width: 527px;
   a {
     color: $rent-strike-color;
     font-style: normal;
